[package]
name = "lru"
version = "0.1.0"
authors = ["Sean Chen <seanchen11235@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lru"
path = "src/lib.rs"

[dependencies]
arrayvec = { version = "0.5.2", default-features = false }

[dev-dependencies]
quickcheck = "1.0.2"
